# llang

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  debug.py
.github/workflows/: cmake.yml
cmake/: linting.cmake  tests.cmake
example/: .gitignore  build.sh  ex.lll  stl.lll
src/: ast.cc  ast.hh  gen.cc  gen.hh  lexer.cc  lexer.hh  main.cc  parser.cc  parser.hh  source.cc  source.hh  span_logic.cc  state.hh  verify.cc  verify.hh
tests/: lexer.cc  parser.cc  source.cc
